Add: 파이어베이스 로그인 기능 완료

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,13 +1,14 @@
 {
-  "printWidth": 120,
+  "printWidth": 80,
   "tabWidth": 2,
   "useTabs": false,
-  "semi": false,
+  "semi": true,
   "singleQuote": true,
   "trailingComma": "all",
   "bracketSpacing": true,
   "jsxBracketSameLine": true,
   "arrowParens": "always",
   "vueIndentScriptAndStyle": false,
-  "endOfLine": "auto"
+  "endOfLine": "auto",
+  "indentUsingSpaces": 2
 }
